--- a/styles/single.css
+++ b/styles/single.css
@@ -189,7 +189,7 @@ input:focus {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  width: 47%;
+  width: 50%;
   text-align: center;
 }
 
